# pong

./: CMakeLists.txt
.cache/clangd/index/: Ball.cpp.02212F4C74897C24.idx  Ball.hpp.50A15E93CCF1EA6F.idx  Game.cpp.D850221B2959CA2A.idx  Game.hpp.B4FD9BD060DB7B75.idx  GameObject.hpp.A33AD63D1E331B66.idx  HomeState.cpp.FBFCE642CDBE0CCF.idx  HomeState.hpp.4758A05296C7A8B7.idx  Paddle.cpp.DBB5C0FA296FFED0.idx  Paddle.hpp.B9BA8D59EB2AD5A1.idx  PongState.cpp.18BAAB8596447116.idx  PongState.hpp.154D845BF547EE92.idx  State.hpp.A9BFE32F21F27B57.idx  main.cpp.C8D8B01E7075E456.idx
include/: Game.hpp  State.hpp
include/objects/: Ball.hpp  Paddle.hpp
include/states/: HomeState.hpp  PongState.hpp
src/: Game.cpp  main.cpp
src/objects/: Ball.cpp  Paddle.cpp
src/states/: HomeState.cpp  PongState.cpp
